# NFC_UID

./: README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: pypi-deploy.yml
docs/: changelog.md  installation.md  migration.md
nfc_uid/: nfc_uid.py
src/: main.py
