[metadata]
name = nfc_uid
version = 0.4.0
description = Get UUID of NFC card with a scanner.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Z3R0-CDS/NFC_UID
author = Zero Codes
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU Affero General Public License v3

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
